--- a/index.html
+++ b/index.html
@@ -5,16 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>MTB Tech Quiz!</title>
+  <script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 
 
 <body>
   <h1 id = "title">The MTB Tech Quiz</h1>
-  
-  <div id = "dynamic">
-    <h3>Are you a MTB gearhead?  Click the Start Quiz button below to find out.</h3>
-    <button id = "startButton">Start Quiz</button>
+  <div class = "js-content">
+    <div>
+      <h3 id = "js-subTitle">Are you a MTB gearhead?  Click the Start Quiz button below to find out.</h3>
+      <button id = "js-startButton">Start Quiz</button>
+    </div>
   </div>
+  <script src="app.js"></script>
 </body>
 </html>
+
