--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 
 
 
-<body>
-  <header>
-    <div class ="row" "col-12">
+<body class = "row" "col-12">
+  <header class = "row" "col-3">
+    <div>
       <h1 id = "title">The MTB Tech Quiz</h1>
     </div>
   </header>
 
-  <div class = "js-content" "row" "col-12">
-    <div class = "col-6">
-      <h3 id = "js-subTitle">Are you a MTB gearhead?  Click the Start Quiz button below to find out.</h3>
-      <div class = "col-3" "row">
+  <div class = "js-content" "row">
+    <div>
+      <h3 id = "js-subTitle" class = "row">Are you a MTB gearhead?  Click the Start Quiz button below to find out.</h3>
+      <div class ="row">
         <button id = "js-startButton">Start Quiz</button>
       </div>
    </div>
