made changes to improve a11y accessibility

--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
 </head>
 
 <body class = "row" "col-12">
-  <header class = "row" "col-3">
-    <div>
-      <h1 id = "title">The MTB Tech Quiz</h1>
-    </div>
-  </header>
-  <div class = "js-content" "row">
-  <script src="app.js"></script>
+  <main role = "main">
+    <header class = "row" "col-3" role = "banner">
+      <div>
+        <h1 id = "title">The MTB Tech Quiz</h1>
+      </div>
+    </header>
+    <div class = "js-content" "row">
+    <script src="app.js"></script>
+  </main>
 </body>
 </html>
 
-<!--  -->
+
 
